Specify paypal connection as active only. Remove unused code PayPal UI on home Include rubocop on new files

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ AllCops:
     - Rakefile
     - app/models/**/*
     - app/controllers/publishers_controller.rb
+    - app/controllers/publishers/paypal_accounts_controller.rb
     - app/controllers/publishers/registrations_controller.rb
     - app/controllers/admin/publisher_notes_controller.rb
     - app/controllers/admin/publishers_controller.rb
@@ -19,6 +20,7 @@ AllCops:
     - app/controllers/publishers/cases_controller.rb
     - app/controllers/publishers/**
     - app/services/uphold/**/*
+    - app/services/paypal/**
     - app/jobs/create_uphold_cards_job.rb
     - app/jobs/create_uphold_channel_card_job.rb
     - app/jobs/exchange_uphold_code_for_access_token_job.rb
