--- a/test/fixtures/site_channel_details.yml
+++ b/test/fixtures/site_channel_details.yml
@@ -147,3 +147,6 @@ promo_enabled_site_details:
 
 potentially_paid_site_details:
   brave_publisher_id: pontiallypaid.org
+
+payal_connected_website_details:
+  brave_publisher_id: "paypalconnected.org"
