--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -93,7 +93,7 @@ default: &default
   max_site_age: <%= ENV["MAX_SITE_AGE"] %> # Maximimum age in weeks of sites enqueued for verification
   paypal_client_id: <%= ENV['PAYPAL_CLIENT_ID'] %>
   paypal_client_secret: <%= ENV['PAYPAL_CLIENT_SECRET'] %>
-  paypal_api_uri: <%= ENV['PAYPAL_API_URI"] %>
+  paypal_api_uri: <%= ENV['PAYPAL_API_URI'] %>
   should_send_notifications: <%= ENV["SHOULD_SEND_NOTIFICATIONS"] %> # Enables eyeshade notifications
   # Sendgrid
   sendgrid_api_key: <%= ENV["SENDGRID_API_KEY"] %>
