--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,10 +21,7 @@ AllCops:
     - app/controllers/publishers/**
     - app/services/uphold/**/*
     - app/services/paypal/**
-    - app/jobs/create_uphold_cards_job.rb
-    - app/jobs/create_uphold_channel_card_job.rb
-    - app/jobs/exchange_uphold_code_for_access_token_job.rb
-    - app/jobs/clean_stale_uphold_data_job.rb
+    - app/jobs/**
     - app/services/payout_report_publisher_includer.rb
   Exclude:
     - bin/**/*
