Remove legacy calls to Eyeshade

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -24,6 +24,8 @@ default: &default
   # Use offline non-canonical implementation of eyeshade API.
   api_eyeshade_offline: <%= ENV["API_EYESHADE_BASE_URI"].blank? %>
   attr_encrypted_key: <%= ENV["ATTR_ENCRYPTED_KEY"] %>
+  bat_ratios_token: <%= ENV["BAT_RATIOS_TOKEN"] %>
+  bat_ratios_url: <%= ENV["BAT_RATIOS_URL"] %>
   # Optional. If present protects the app with HTTP Basic Auth.
   basic_auth_password: <%= ENV["BASIC_AUTH_PASSWORD"] %>
   basic_auth_user: <%= ENV["BASIC_AUTH_USER"] %>
@@ -108,6 +110,7 @@ default: &default
 development:
   <<: *default
   active_promo_id: "free-bats-2018q1"
+  bat_ratios_url: "https://bat-ratios-dev.herokuapp.com"
   base_referral_url: "brave.com"
   internal_email: brave-publishers@localhost.local
   support_email: brave-publishers@localhost.local
@@ -138,6 +141,7 @@ test:
   admin_ip_whitelist: "127.0.0.1"
   api_promo_base_uri: "" # http://127.0.0.1:8194
   active_promo_id: "free-bats-2018q1"
+  bat_ratios_token: ""
   api_auth_token: "fake_api_auth_token"
   api_eyeshade_base_uri: http://127.0.0.1:3001
   api_eyeshade_offline: true
