--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "brave-ui": "^0.30.8",
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.1",
+    "handlebars": "^4.5.3",
     "js-yaml": "3.13.1",
     "moment": "^2.24.0",
     "prop-types": "^15.6.2",
