Changes for Promo

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,7 @@ AllCops:
     - app/controllers/admin/publisher_notes_controller.rb
     - app/controllers/admin/publishers_controller.rb
     - app/controllers/admin/publishers/publisher_status_updates_controller.rb
+    - app/controllers/admin/unattached_promo_registrations_controller.rb
     - app/controllers/publishers/cases_controller.rb
     - app/controllers/publishers/**
     - app/services/uphold/**/*
@@ -24,6 +25,8 @@ AllCops:
     - app/jobs/exchange_uphold_code_for_access_token_job.rb
     - app/jobs/clean_stale_uphold_data_job.rb
     - app/services/payout_report_publisher_includer.rb
+    - app/services/promo/unattached_registrar.rb
+    - app/services/promo/registrations_geo_stats_fetcher.rb
   Exclude:
     - bin/**/*
     - db/**/*
