--- a/config/heavy_sidekiq.yml
+++ b/config/heavy_sidekiq.yml
@@ -8,6 +8,7 @@
   - scheduler
   - default
   - low
+:enabled: <%= !(ENV["RAILS_ENV"] == 'development') %>
 :schedule:
   EnqueueSiteChannelVerifications:
     cron: "42 * * * *"
