--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -7,6 +7,7 @@
   - default
   - scheduler
   - low
+:enabled: <%= !(ENV["RAILS_ENV"] == 'development') %>
 :schedule:
   EnqueueSiteChannelVerifications:
     cron: "42 * * * *"
