--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.2.3",
+    "@babel/core": "^7.0.0-0",
     "@babel/preset-react": "^7.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
