Feature: Paypal UI (#2363)
* Specify paypal connection as active only.
* PayPal UI on home
* Include rubocop on new files
* Support BAT points translation. Closes #2357

Co-Authored-By: Cory McDonald <cmcdonald@brave.com>

--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -255,4 +255,6 @@ promo_enabled_but_only_user_funds:
 potentially_paid:
   email: "priscilla@potentiallypaid.org"
 
-
+paypal_connected:
+  <<: *default
+  email: "paypal_connected@example.org"
