Access base url from anywhere

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -24,6 +24,7 @@ default: &default
   # Use offline non-canonical implementation of eyeshade API.
   api_eyeshade_offline: <%= ENV["API_EYESHADE_BASE_URI"].blank? %>
   attr_encrypted_key: <%= ENV["ATTR_ENCRYPTED_KEY"] %>
+  base_url: <%= ENV["BASE_URL"] %>
   bat_ratios_token: <%= ENV["BAT_RATIOS_TOKEN"] %>
   bat_ratios_url: <%= ENV["BAT_RATIOS_URL"] %>
   # Optional. If present protects the app with HTTP Basic Auth.
