--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,7 @@ bundler_args: "--jobs=3 --retry=3 --without production --without staging --witho
 dist: xenial
 sudo: required
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 services:
   - postgresql
   - redis-server
