--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -4,6 +4,7 @@ unconnected:
   created_at: 2019-01-01
   publisher: completed
   is_member: false
+  send_emails: 2019-01-01
   country: "usa"
 
 suspended_connection:
