--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -4,6 +4,7 @@ unconnected:
   created_at: 2019-01-01
   publisher: completed
   is_member: false
+  send_emails: 2019-01-01
   country: "usa"
 
 suspended_connection:
@@ -18,6 +19,7 @@ youtube_initial_connection:
     iv: salt
   ) %>"
   encrypted_uphold_access_parameters_iv: "<%= Base64.encode64(salt) %>"
+  send_emails: 2019-01-01
 
 verified_connection:
   publisher: verified
@@ -126,6 +128,7 @@ restricted_member:
   address: "abcdabcd-0000-0000-0000-abcd00000006"
   status: "restricted"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
+  send_emails: 2019-01-01
   encrypted_uphold_access_parameters:  "<%= TotpRegistration.encrypt_secret(
     { scope: 'cards:write' }.to_json,
     key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32),
