--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -58,6 +58,8 @@ default: &default
   uphold_dashboard_url: <%= ENV["UPHOLD_DASHBOARD_URL"] %>
   uphold_client_id: <%= ENV["UPHOLD_CLIENT_ID"] %>
   uphold_client_secret: <%= ENV["UPHOLD_CLIENT_SECRET"] %>
+  uphold_login_client_id: <%= ENV["UPHOLD_LOGIN_CLIENT_ID"] %>
+  uphold_login_client_secret: <%= ENV["UPHOLD_LOGIN_CLIENT_SECRET"] %>
   uphold_api_uri: <%= ENV["UPHOLD_API_URI"] %>
   uphold_scope: <%= ENV["UPHOLD_SCOPE"] %>
   # Use offline mode of publisher host inspector
