--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -3,6 +3,7 @@
 # Just registered.
 default: &default
   email: "alice@default.org"
+  role: "<%= Publisher::PUBLISHER %>"
   name: "Alice the Pyramid"
   default_site_banner_id: "00000000-0000-0000-0000-000000000000"
   two_factor_prompted_at: "<%= 1.day.ago %>"
@@ -32,6 +33,9 @@ verified_totp_only:
   <<: *default
   email: "alice_totp@verified.org"
   name: "Alice the Verified TOTP User"
+
+browser_user:
+  role: "<%= Publisher::BROWSER_USER %>"
 
 # A publisher that has received an authentication email
 completed:
