--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -33,6 +33,9 @@ verified_totp_only:
   email: "alice_totp@verified.org"
   name: "Alice the Verified TOTP User"
 
+browser_user:
+  role: "<%= Publisher::BROWSER_USER %>"
+
 # A publisher that has received an authentication email
 completed:
   email: "alice@completed.org"
