--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "preset": "ts-jest/presets/js-with-babel"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-0",
+    "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -73,7 +73,9 @@
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.1",
     "handlebars": "^4.5.3",
+    "is-accessor-descriptor": "3.0.1",
     "js-yaml": "3.13.1",
+    "kind-of": "6.0.3",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.6.2",
@@ -101,7 +103,7 @@
     "enzyme-to-json": "^3.3.4",
     "hoek": "^6.0.1",
     "husky": "^1.3.1",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "jest-styled-components": "^5.0.1",
     "prettier": "1.16.3",
     "stylelint": "^10.1.0",
