--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
   - yarn install
   - yarn audit --groups dependencies
   - yarn lint
-  - bundle exec rails test
+  - bin/rails test
   - yarn test
   - bundle exec brakeman
   - bundle exec rubocop
