Remove unused package: handlebars (#2595)
* Remove unused package: handlebars
* Tighten travis.yml
* Fix tests
* Fix linting
* Update redis url. Also had updated in the env variables on travis too
* Get rid of false positive from husky pre-commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ before_script:
   - bundle exec rake db:setup
 script:
   - yarn install
-  - yarn audit
+  - yarn audit --groups dependencies
   - yarn lint
-  - bundle exec rails test
+  - bin/rails test
   - yarn test
   - bundle exec brakeman
   - bundle exec rubocop
