--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^4.2.0",
+    "@rails/ujs": "^6.0.2",
+    "@rails/webpacker": "^5.0.1",
     "@types/moment": "^2.13.0",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
@@ -74,7 +74,7 @@
     "clipboard": "^2.0.1",
     "is-accessor-descriptor": "3.0.1",
     "js-yaml": "3.13.1",
-    "kind-of": "6.0.3",
+    "kind-of": "^6.0.3",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "prop-types": "^15.6.2",
@@ -105,7 +105,7 @@
     "jest": "^25.1.0",
     "jest-styled-components": "^5.0.1",
     "prettier": "1.16.3",
-    "stylelint": "^13.2.1",
+    "stylelint": "^13.3.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
@@ -116,6 +116,6 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-react": "^3.6.0",
-    "webpack-dev-server": "3.8.1"
+    "webpack-dev-server": "3.10.3"
   }
 }
