--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "grommet": "^2.9.0",
-    "react": "^16.8.3",
+    "kind-of": "^6.0.3",
+    "react": "^16.13.1",
     "react-dom": "^16.8.3",
     "react-dom-confetti": "^0.1.0",
     "react-intl": "^3.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.0",
-    "styled-components": "^4.1.3"
+    "react-scripts": "3.4.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "prettier": "1.16.3"
