--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -184,6 +184,7 @@ test:
   # a real api_key is needed for recording new VCR based tests
   sendgrid_api_offline: true
   sendgrid_api_key: <%= ENV["SENDGRID_API_KEY"] || "fakeapikey" %>
+  sendgrid_marketing_list_id: 10300648
   sendgrid_publishers_list_id: 3986776
   slack_webhook_url: false
 
