--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-dom": "^16.6.3",
     "react-intl": "^3.3.2",
     "react-select": "^3.0.8",
+    "react-tooltip": "^4.2.3",
     "styled-components": "^4.4.1",
     "tributejs": "^3.7.1",
     "ts-loader": "^5.3.0",
