--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,7 @@ development:
   secondary:
     <<: *default
     url: <%= ENV['DATABASE_URL'] || "postgres://postgres@localhost/brave_publishers_dev" %>
+    replica: true
 
 test:
   primary:
@@ -47,3 +48,4 @@ staging:
   secondary:
     <<: *default
     url: <%= ENV['DATABASE_URL'] %>
+    replica: true
