Use the right credentials

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -41,10 +41,10 @@ default: &default
   proxy_url: <%= ENV["PROXY_URL"] %>
   # AWS S3 sttings
   s3_rewards_public_domain: <%= ENV["S3_REWARDS_PUBLIC_DOMAIN"] %>
-  s3_publishers_access_key_id: <%= ENV["S3_PUBLISHERS_ACCESS_KEY_ID"] %>
-  s3_publishers_secret_access_key: <%= ENV["S3_PUBLISHERS_SECRET_ACCESS_KEY"] %>
-  s3_publishers_bucket_region: <%= ENV["S3_PUBLISHERS_BUCKET_REGION"] %>
-  s3_publishers_bucket_name: <%= ENV["S3_PUBLISHERS_BUCKET_NAME"] %>
+  s3_rewards_access_key_id: <%= ENV["S3_REWARDS_ACCESS_KEY_ID"] %>
+  s3_rewards_secret_access_key: <%= ENV["S3_REWARDS_SECRET_ACCESS_KEY"] %>
+  s3_rewards_bucket_region: <%= ENV["S3_REWARDS_BUCKET_REGION"] %>
+  s3_rewards_bucket_name: <%= ENV["S3_REWARDS_BUCKET_NAME"] %>
   #SMTP Mailer settings
   smtp_server_port: <%= ENV["SENDGRID_SMTP_PORT"] %>
   smtp_server_address: <%= ENV["SENDGRID_SMTP_SERVER"] %>
