--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -10,7 +10,7 @@
 :enabled: <%= !(ENV["RAILS_ENV"] == 'development') %>
 :schedule:
   EnqueueSiteChannelVerifications:
-    cron: "42 * * * *"
+    cron: "42 1 * * *"
     decription: "For Site Channels created within the past week, enqueue jobs to verify the domain of each unique brave_publisher_id."
     queue: scheduler
   CleanStaleUpholdDataJob:
