--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -92,6 +92,7 @@ default: &default
   default_api_page_size: <%= ENV["DEFAULT_API_PAGE_SIZE"] %>
   api_promo_base_uri: <%= ENV["API_PROMO_BASE_URI"] %>
   api_promo_key: <%= ENV["API_PROMO_KEY"] %>
+  peer_to_peer_cap: <%= ENV["PEER_TO_PEER_CAP"] || 1000 %>
   active_promo_id: <%= ENV["ACTIVE_PROMO_ID"] %>
   base_referral_url: <%= ENV["BASE_REFERRAL_URL"] %>
   max_site_age: <%= ENV["MAX_SITE_AGE"] %> # Maximimum age in weeks of sites enqueued for verification
