--- a/config/heavy_sidekiq.yml
+++ b/config/heavy_sidekiq.yml
@@ -33,11 +33,11 @@
     description: "Syncs the channel stats via youtube and twitch apis"
     queue: low
   CacheBrowserChannelsJsonJob:
-    cron: "0 */2 * * *"
+    cron: "0 3 * * *"
     description: "Refreshes the redis cache for browser channel json"
     queue: heavy
   CacheBrowserChannelsJsonJobV2:
-    cron: "0 */2 * * *"
+    cron: "0 8 * * *"
     description: "Refreshes the redis cache for browser channel json V2"
     queue: heavy
   Cache::Metrics::UpholdKycByCountryJob:
