--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -92,6 +92,8 @@ default: &default
   default_api_page_size: <%= ENV["DEFAULT_API_PAGE_SIZE"] %>
   api_promo_base_uri: <%= ENV["API_PROMO_BASE_URI"] %>
   api_promo_key: <%= ENV["API_PROMO_KEY"] %>
+  payment_service_uri: <%= ENV["PAYMENT_SERVICE_URI"] || "http://localhost:3335/" %>
+  payment_service_key: <%= ENV["PAYMENT_SERVICE_KEY"] || "Bearer foobarfoobar" %>
   peer_to_peer_cap: <%= ENV["PEER_TO_PEER_CAP"] || 1000 %>
   active_promo_id: <%= ENV["ACTIVE_PROMO_ID"] %>
   base_referral_url: <%= ENV["BASE_REFERRAL_URL"] %>
