--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.2",
+    "@rails/activestorage": "^6.0.3-1",
+    "@rails/ujs": "^6.0.3-1",
     "@rails/webpacker": "^5.1.1",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
