Use new version of S3 privacy preserving asset serving.

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -45,6 +45,12 @@ default: &default
   s3_rewards_secret_access_key: <%= ENV["S3_REWARDS_SECRET_ACCESS_KEY"] %>
   s3_rewards_bucket_region: <%= ENV["S3_REWARDS_BUCKET_REGION"] %>
   s3_rewards_bucket_name: <%= ENV["S3_REWARDS_BUCKET_NAME"] %>
+  # (Albert Wang): Separate bucket, info is behind 2 different CDN providers, which gives better privacy
+  s3_rewards2_public_domain: <%= ENV["S3_REWARDS2_PUBLIC_DOMAIN"] %>
+  s3_rewards2_access_key_id: <%= ENV["S3_REWARDS2_ACCESS_KEY_ID"] %>
+  s3_rewards2_secret_access_key: <%= ENV["S3_REWARDS2_SECRET_ACCESS_KEY"] %>
+  s3_rewards2_bucket_region: <%= ENV["S3_REWARDS2_BUCKET_REGION"] %>
+  s3_rewards2_bucket_name: <%= ENV["S3_REWARDS2_BUCKET_NAME"] %>
   #SMTP Mailer settings
   smtp_server_port: <%= ENV["SENDGRID_SMTP_PORT"] %>
   smtp_server_address: <%= ENV["SENDGRID_SMTP_SERVER"] %>
