--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -262,3 +262,18 @@ potentially_paid:
 paypal_connected:
   <<: *default
   email: "paypal_connected@example.org"
+
+promo_not_registered:
+  email: "promo_not_registered@brave.com"
+  name: "Promo not registered"
+  agreed_to_tos: "<%= 1.day.ago %>"
+  two_factor_prompted_at: "<%= 1.day.ago %>"
+  default_currency_confirmed_at: "<%= 1.day.ago %>"
+  feature_flags: <%= { UserFeatureFlags::REFERRAL_KYC_REQUIRED => true }.to_json %>
+
+promo_lockout:
+  email: "promo_locked@brave.com"
+  name: "Promo locked"
+  agreed_to_tos: "<%= 1.day.ago %>"
+  two_factor_prompted_at: "<%= 1.day.ago %>"
+  default_currency_confirmed_at: "<%= 1.day.ago %>"
