--- a/test/fixtures/promo_registrations.yml
+++ b/test/fixtures/promo_registrations.yml
@@ -33,5 +33,5 @@ promo_not_registered:
   kind: channel
   promo_id: 1
   referral_code: PRO321
+  channel: reddit_promo_registered
   publisher: promo_not_registered
-  promo_campaign: test_promo_campaign
