--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-intl": "^3.3.2",
     "react-select": "^3.0.8",
     "react-tooltip": "^4.2.3",
+    "sass-loader": "^8.0.2",
     "styled-components": "^5.1.0",
     "tributejs": "^3.7.1",
     "ts-loader": "^5.3.0",
