--- a/test/fixtures/reddit_channel_details.yml
+++ b/test/fixtures/reddit_channel_details.yml
@@ -1,4 +1,4 @@
-reddit_details:
+reddit_details: &reddit_details
   reddit_channel_id: "12345678"
   auth_provider: "register_reddit_channel"
   name: "Reddit New"
@@ -7,3 +7,11 @@ reddit_details:
   channel_url: "https://reddit.com/user/user12345678"
   created_at: <%= Time.now %>
   updated_at: <%= Time.now %>
+
+promo_reddit_details:
+  <<: *reddit_details
+  reddit_channel_id: <%= SecureRandom.rand(10 ** 10).to_s.rjust(10, '0'))
+
+promo_lockout_reddit_details:
+  <<: *reddit_details
+  reddit_channel_id: <%= SecureRandom.rand(10 ** 10).to_s.rjust(10, '0'))
