Get the developer environment working

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -28,7 +28,7 @@ RUN apk add --update --no-cache \
 
 RUN gem install bundler
 
-WORKDIR /app
+WORKDIR /var/www/
 
 # TODO: Check to see if reloading works
 
