--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,12 +12,13 @@ services:
       DATABASE_URL_TEST: postgres://postgres@postgres:5432/brave_publishers_test
       SSL: "off"
       SENDGRID_SMTP_SERVER: mailcatcher
+      DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: "true"
     command: sh -c "rm -f tmp/pids/server.pid && bundle exec rake app_initializer:setup && bundle exec rails s -p 3000 -b '0.0.0.0'"
     depends_on:
       - postgres
       - redis
     volumes:
-      - publishers:/app:rw
+      - .:/var/www
     ports:
       - "3000:3000"
     env_file: .env
@@ -55,4 +56,3 @@ services:
 
 volumes:
   db-data:
-  publishers:
