prod docker modifications, minor package.json changes

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+    image: publishers:latest
     environment:
       RAILS_ENV: development
       REDIS_URL: redis://redis:6379/0
