--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -40,7 +40,8 @@ COPY package.json yarn.lock ./
 # Install the gems.
 RUN bundle config build.nokogiri --use-system-libraries
 RUN bundle check || bundle install --jobs 20 --retry 5
-RUN yarn install
+RUN yarn cache clean
+RUN yarn install --verbose
 
 # We copy all the files from the current directory to our
 # /app directory
