--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Prepare database
         run: bundle exec rake db:prepare
         env: 
-          DATABASE_URL_TEST: postgres://postgres@localhost:5432/brave_publishers_test
+          DATABASE_URL_TEST: postgres://postgres@postgres:5432/brave_publishers_test
       - name: Run tests
         run: bundle exec rails test
         env: 
-          DATABASE_URL_TEST: postgres://postgres@localhost:5432/brave_publishers_test
+          DATABASE_URL_TEST: postgres://postgres@postgres:5432/brave_publishers_test
       - name: Brakeman
         run: bundle exec brakeman
       - name: Rubocop
