--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Install dependencies
         run: bundle install
       - name: Prepare database
-        run: bundle exec rake db:prepare
+        run: RAILS_ENV=test bundle exec rake db:prepare
         env: 
           DATABASE_URL_TEST: postgres://postgres:postgres@postgres:5432/brave_publishers_test
       - name: Run tests
-        run: bundle exec rails test
+        run: RAILS_ENV=test bundle exec rails test
         env: 
           DATABASE_URL_TEST: postgres://postgres:postgres@postgres:5432/brave_publishers_test
       - name: Brakeman
