--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -40,11 +40,11 @@ jobs:
       - name: Prepare database
         run: RAILS_ENV=test bundle exec rake db:prepare
         env: 
-          DATABASE_URL_TEST: postgres://postgres:postgres@postgres:5432/brave_publishers_test
+          DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
       - name: Run tests
         run: RAILS_ENV=test bundle exec rails test
         env: 
-          DATABASE_URL_TEST: postgres://postgres:postgres@postgres:5432/brave_publishers_test
+          DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
       - name: Brakeman
         run: bundle exec brakeman
       - name: Rubocop
