--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -72,6 +72,12 @@ default: &default
   uphold_login_client_secret: <%= ENV["UPHOLD_LOGIN_CLIENT_SECRET"] %>
   uphold_api_uri: <%= ENV["UPHOLD_API_URI"] %>
   uphold_scope: <%= ENV["UPHOLD_SCOPE"] %>
+
+  # stripe
+  stripe_publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
+  stripe_secret_key: <%= ENV["STRIPE_SECRET_KEY"] %>
+  stripe_client_id: <%= ENV["STRIPE_CLIENT_ID"] %>
+
   # Use offline mode of publisher host inspector
   host_inspector_offline: <%= ENV["HOST_INSPECTOR_OFFLINE"] %>
   terms_of_service_url: <%= ENV["TERMS_OF_SERVICE_URL"] %>
