--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@rails/webpacker": "^5.1.1",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "axios": "^0.19.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
