--- a/config/services.yml
+++ b/config/services.yml
@@ -1,7 +1,8 @@
 default: &default
   fastly: <%= ENV["FASTLY_API"] || "https://api.fastly.com/public-ip-list" %>
   gemini:
-    base_uri: <%= ENV["GEMINI_API"] || "https://exchange.sandbox.gemini.com/" %>
+    api_uri: <%= ENV["GEMINI_API"] || "https://api.sandbox.gemini.com" %>
+    oauth_uri: <%= ENV["GEMINI_OAUTH_API"] || "https://exchange.sandbox.gemini.com" %>
     client_id: <%= ENV["GEMINI_CLIENT_ID"] %>
     client_secret: <%= ENV["GEMINI_CLIENT_SECRET"] %>
 
