--- a/config/services.yml
+++ b/config/services.yml
@@ -1,5 +1,17 @@
 default: &default
   fastly: <%= ENV["FASTLY_API"] || "https://api.fastly.com/public-ip-list" %>
+  gemini:
+    api_uri: <%= ENV["GEMINI_API"] || "https://api.sandbox.gemini.com" %>
+    oauth_uri: <%= ENV["GEMINI_OAUTH_API"] || "https://exchange.sandbox.gemini.com" %>
+    client_id: <%= ENV["GEMINI_CLIENT_ID"] %>
+    client_secret: <%= ENV["GEMINI_CLIENT_SECRET"] %>
+  stripe:
+    publishable_key: <%= ENV["STRIPE_PUBLISHABLE_KEY"] %>
+    client_id: <%= ENV["STRIPE_CLIENT_ID"] %>
+    client_secret: <%= ENV["STRIPE_SECRET_KEY"] %>
+
+test:
+  <<: *default
 
 development:
   <<: *default
