Correct the module name for ChannelTransfers

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -20,7 +20,7 @@
   CleanAbandonedSiteChannelsJob:
     cron: "0 3 * * *"
     description: "Remove abandoned site channels."
-  Channel::TransferChannelsJob:
+  Channels::TransferChannelsJob:
     cron: "0 8 * * *"
     description: "Complete transfer of channels that have exceeded their timeout time without being rejected"
   Sync::ChannelPromoRegistrationsStatsJob:
