--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,9 @@ AllCops:
     - app/controllers/publishers/**
     - app/services/uphold/**/*
     - app/services/paypal/**
+    - app/services/gemini/**
+    - app/jobs/connections/**/*
+    - app/jobs/channels/**/*
     - app/jobs/create_uphold_cards_job.rb
     - app/jobs/create_uphold_channel_card_job.rb
     - app/jobs/exchange_uphold_code_for_access_token_job.rb
