Implement basic connection, indexing, and mapping

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -39,6 +39,8 @@ default: &default
   piwik_token: <%= ENV["PIWIK_TOKEN"] %>
   piwik_host_prefix: <%= ENV["PIWIK_HOST_PREFIX"] %>
   proxy_url: <%= ENV["PROXY_URL"] %>
+
+  elasticsearch_url: <%= ENV["ELASTICSEARCH_URL"] || "http://localhost:9200" %>
   # AWS S3 sttings
   s3_rewards_public_domain: <%= ENV["S3_REWARDS_PUBLIC_DOMAIN"] %>
   s3_rewards_access_key_id: <%= ENV["S3_REWARDS_ACCESS_KEY_ID"] %>
