Frontend for different default_currency

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -145,6 +145,7 @@ development:
   uphold_scope: <%= ENV["UPHOLD_SCOPE"] || "cards:read,cards:write,user:read" %>
   uphold_api_uri: <%= ENV["UPHOLD_API_URI"] || "https://api-sandbox.uphold.com" %>
   uphold_dashboard_url: <%= ENV["UPHOLD_DASHBOARD_URL"] || "https://sandbox.uphold.com/dashboard" %>
+  paypal_connect_uri: https://sandbox.paypal.com
   fee_rate: 0.05
 
   # Social media links
