--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,8 @@ AllCops:
     - app/controllers/admin/unattached_promo_registrations_controller.rb
     - app/controllers/publishers/cases_controller.rb
     - app/controllers/publishers/**
+    - app/controllers/connections/**
+    - app/helpers/publishers_helper.rb
     - app/services/uphold/**/*
     - app/services/paypal/**
     - app/jobs/create_uphold_cards_job.rb
