Change the from_email for Referrals

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -33,6 +33,7 @@ default: &default
   internal_email: <%= ENV["INTERNAL_EMAIL"] %>
   bizdev_email: <%= ENV["BIZDEV_EMAIL"] %>
   payout_contact_email: <%= ENV["PAYOUT_CONTACT_EMAIL"] %>
+  brand_bidding_email: <%= ENV["BRAND_BIDDING_EMAIL"] %>
   new_ui_email_whitelist: <%= ENV["NEW_UI_EMAIL_WHITELIST"] %>
   # Piwik analytics endpoint with trailing slash e.g. https://piwik.example.com/
   piwik_host: <%= ENV["PIWIK_HOST"] %>
