--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "@babel/preset-react": "^7.0.0",
     "@rails/activestorage": "^6.0.3-1",
     "@rails/ujs": "^6.0.3-1",
-    "@rails/webpacker": "^5.1.1",
+    "@rails/webpacker": "^5.2.1",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "axios": "^0.19.2",
     "babel-core": "7.0.0-bridge.0",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "babel-polyfill": "^6.26.0",
